<resources>
    <string name="app_name" translatable="false">Atarashii!</string>
    <string name="app_name_beta" translatable="false">Atarashii! β</string>
    <string name="title_activity_firstRun">First Run Setup</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="title_activity_profile">User profile</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_backup">Backup</string>
    <string name="title_activity_charts">Charts</string>
    <string name="title_activity_browse">Browse</string>
    <string name="menu_listType">Switch List</string>
    <string name="menu_inverse">Inverse List</string>
    <string name="menu_sync">Full Sync</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_details">Details</string>
    <string name="menu_sort">Sort</string>
    <string name="sort_title">Title</string>
    <string name="sort_type">Type</string>
    <string name="sort_score">Score</string>
    <string name="sort_status">Status</string>
    <string name="sort_progress">Progress</string>
    <string name="toast_error_noConnectivity">No network connection detected.</string>
    <string name="toast_error_api">API error detected, please notify the developers!</string>
    <string name="toast_error_reviews">There are no reviews available.</string>
    <string name="toast_error_maintenance">API unavailable, maintenance in progress!</string>
    <string name="toast_error_UserRecord">Userprofile is empty!</string>
    <string name="toast_error_Search">Error while searching! Please try again later.</string>
    <string name="toast_error_Anime_Sync">Sync error while getting animelist!</string>
    <string name="toast_error_Manga_Sync">Sync error while getting mangalist!</string>
    <string name="toast_error_Records">Error while getting records. Please try again later.</string>
    <string name="toast_error_DetailsError">Atarashii can\'t load the details!</string>
    <string name="toast_error_keys">Atarashii can\'t get the Auth keys from AL!</string>
    <string name="toast_error_VerifyProblem">Check your credentials and try again.</string>
    <string name="toast_error_Friends">Sync error while getting friendlist!</string>
    <string name="toast_error_nothingFound">No anime or manga results found.</string>
    <string name="toast_error_convert">The comment could not be converted!</string>
    <string name="toast_info_SyncMessage">Syncing everything. This could take a few seconds.</string>
    <string name="toast_info_password">Username and password combination doesn\'t match!</string>
    <string name="toast_info_Copied">Copied the title successfully to the clipboard!</string>
    <string name="toast_info_hold_on">Hold on a second, we are still loading information!</string>
    <string name="toast_info_comment_added">It could take 5 minutes until it is visible</string>
    <string name="toast_info_disabled">This feature is currently disabled :(</string>
    <string name="toast_info_disabled_youtube">Comments with Youtube videos aren\'t supported :(</string>
    <string name="toast_info_backup_saved">The backup has been created!</string>
    <string name="toast_info_backup_revert">The changes have been reverted!</string>
    <string name="toast_info_backup_remove">The backup has been removed!</string>
    <string name="toast_info_backup_list">The backup is not compatible with this site!</string>
    <string name="toast_info_widget_exists">A widget with the chosen record already exists!</string>
    <string name="toast_info_comment">The comment is short!</string>
    <string name="toast_permission_backup">Permission denied by user, the backups can\'t be loaded!</string>
    <string name="dialog_title_userername">Username mismatch</string>
    <string name="dialog_title_permission">Permission denied</string>
    <string name="dialog_title_restore">Restore lists?</string>
    <string name="dialog_title_view">View</string>
    <string name="dialog_title_tags">My tags</string>
    <string name="dialog_title_storage_value">Storage value</string>
    <string name="dialog_title_rewatched_times">Times rewatched</string>
    <string name="dialog_title_rewatched_priority">Rewatch priority</string>
    <string name="dialog_title_storage">Storage type</string>
    <string name="dialog_title_comment">My comments</string>
    <string name="dialog_title_share">Share</string>
    <string name="dialog_title_share_via">Share via</string>
    <string name="dialog_title_Verifying">Verifying</string>
    <string name="dialog_title_rating">Rating</string>
    <string name="dialog_title_watched_update">I\'ve watched</string>
    <string name="dialog_title_read_update">I\'ve read</string>
    <string name="dialog_title_status">Status</string>
    <string name="dialog_title_edit_comment">Edit comment</string>
    <string name="dialog_title_add_comment">Add comment</string>
    <string name="dialog_title_id_search">ID search</string>
    <string name="dialog_title_update_navigation">Update background</string>
    <string name="dialog_hint_tags">Separate your tags with a comma</string>
    <string name="dialog_hint_comment">Enter you comment</string>
    <string name="dialog_message_view">Which list do you want to view?</string>
    <string name="dialog_message_permission">Please enable the android permission manually.\nYou have chosen to never show it again.</string>
    <string name="dialog_message_restore">This could remove some records in your list!</string>
    <string name="dialog_message_logout">Are you sure you wish to logout? This will erase all stored data and images.</string>
    <string name="dialog_message_id_search">Please press on the Anime or Manga button to search. Remember that Anime and Manga IDs aren\'t the same!</string>
    <string name="dialog_message_remove">Absolutely sure? Once it\'s gone, it\'s gone for good and can\'t be recovered. Not easily anyways.</string>
    <string name="dialog_message_share">Which list do you want to share?</string>
    <string name="dialog_message_Verifying">Making sure your account is OK. Hold tight a sec.</string>
    <string name="dialog_message_update_navigation">Enter the Image URL below.</string>
    <string name="dialog_message_last_post">Last post by</string>
    <string name="dialog_message_username">It is possible that the chosen backup is not your backup!</string>
    <string name="dialog_label_logout">Logout</string>
    <string name="layout_card_loading">Loading</string>
    <string name="action_viewListOnMAL">View list in browser</string>
    <string name="nav_item_my_profile">My Profile</string>
    <string name="nav_item_my_list">My List</string>
    <string name="nav_item_my_friends">My Friends</string>
    <string name="nav_item_my_forum">Forum</string>
    <string name="nav_item_top_rated">Top Rated</string>
    <string name="nav_item_top_season">Top Season</string>
    <string name="nav_item_top_year">Top Year</string>
    <string name="nav_item_most_popular">Most Popular</string>
    <string name="nav_item_popular_season">Popular Season</string>
    <string name="nav_item_popular_year">Popular Year</string>
    <string name="nav_item_just_added">Just Added</string>
    <string name="nav_item_upcoming">Upcoming</string>
    <string name="nav_item_return">Return</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="card_content_other">Other</string>
    <string name="card_content_loading">Loading, just a sec.</string>
    <string name="card_content_chapseen">Chapters Read:</string>
    <string name="card_content_episodestime">Days of Anime:</string>
    <string name="action_viewMALPage">View Details on MyAnimeList</string>
    <string name="action_Share">Share</string>
    <string name="action_Remove">Remove from list</string>
    <string name="action_Copy">Copy title</string>
    <string name="action_AddToList">Add to list</string>
    <string name="contributor_anima_name" translatable="false">Chris Fanti (<a href="http://myanimelist.net/profile/AnimaSA">AnimaSA</a>)</string>
    <string name="contributor_anima_summary">\&quot;All the other apps suck!\&quot; \n\nFounder and main coder. Tired of the poor UI of other apps and their general lack of maintenance, he went and created this one.</string>
    <string name="contributor_motokochan_name" translatable="false">Michael Johnson (<a href="http://myanimelist.net/profile/motokochan">motokochan</a>)</string>
    <string name="contributor_motokochan_summary">Focuses on code cleanup and small feature implementation. Worked on extending application for manga support.</string>
    <string name="contributor_apkawa_name" translatable="false">Arkadiy Ivanov (<a href="http://myanimelist.net/profile/apkawa">apkawa</a>)</string>
    <string name="contributor_apkawa_summary">Implemented search functionality. </string>
    <string name="contributor_dsko_name" translatable="false">Dustin Skoracki (<a href="http://myanimelist.net/profile/d-sko">d-sko</a>)</string>
    <string name="contributor_dsko_summary">Implemented retrofit for API handling.</string>
    <string name="translations">Atarashii! started to support different languages since version 1.4! Everyone can <a href="http://atarashii.oneskyapp.com/collaboration/project?id=22217">join the translation project</a> to contribute.</string>
    <string name="translations_notListed">My language is not listed on oneskyapp?</string>
    <string name="translations_notListed_summary">If your language is not listed we would recommend you to ask Ratan Dhawtal to enable it or add a comment on <a href="https://plus.google.com/113694229897758723284/posts/FsxPDiFCxT8">this Google+ post</a>. We will add it ASAP and reply to notify you.</string>
    <string name="translations_notApproved">Why are my translated phases still not approved?</string>
    <string name="translations_notApproved_summary">Most likely the contributor is quite busy with the development of the app. You could send the developer after 1 month a reminder, just do not send too many of them.</string>
    <string name="dialog_DefaultList">Default List</string>
    <string name="preference_category_sharing">Other settings</string>
    <string name="preference_TraditionalList">Use Traditional List</string>
    <string name="preference_customShareText">Custom Share Text</string>
    <string name="preference_displayVolumes">Use Volumes on Covers</string>
    <string name="summary_DefaultList">Which list do you want the app to load when opened?</string>
    <string name="preference_summary_TraditionList">Use the tried-and-true list instead of the coverflow-esque style. Requires restart to take effect.</string>
    <string name="preference_summary_customShareText">Don\'t like the default share text? Create your own! Use $title; and $link; in place of the title and link to MAL, we\'ll do the rest.</string>
    <string name="preference_summary_displayVolumes">Display volumes instead of chapters on covers. The +1 Read action will also apply to volumes instead of chapters. Requires restart to take effect.</string>
    <string name="preference_default_customShareText">Check out $title; on MyAnimeList!\n$link;</string>
    <string name="listType_all">Everything</string>
    <string name="listType_onhold">On Hold</string>
    <string name="listType_dropped">Dropped</string>
    <string name="listType_planned">Planned</string>
    <string name="listType_Completed">Completed</string>
    <string name="listType_InProgress">In Progress</string>
</resources>