<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category_ListSettings">
        <ListPreference
            android:summary="@string/summary_DefaultList"
            android:dialogTitle="@string/dialog_DefaultList"
            android:title="@string/dialog_DefaultList"
            android:entries="@array/listTypeArray"
            android:entryValues="@array/listTypeValuesArray"
            android:key="defList" />
        <CheckBoxPreference
            android:key="traditionalList"
            android:summary="@string/preference_summary_TraditionList"
            android:title="@string/preference_TraditionalList" />
        
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_mangaSettings">
        <CheckBoxPreference android:title="@string/preference_displayVolumes" android:summary="@string/preference_summary_displayVolumes" android:key="displayVolumes" android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_sharing">
        <EditTextPreference
            android:key="customShareText"
            android:title="@string/preference_customShareText"
            android:summary="@string/preference_summary_customShareText"
            android:defaultValue="@string/preference_default_customShareText" />
    </PreferenceCategory>
</PreferenceScreen>