<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:res-auto="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_Share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_Share"
        res-auto:showAsAction="always" />
    <item
        android:id="@+id/action_ViewMALPage"
        android:icon="@drawable/ic_location_web_site"
        android:title="@string/action_viewMALPage"
        res-auto:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_Remove"
        android:title="@string/action_Remove"
        res-auto:showAsAction="never" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/action_Copy"
        res-auto:showAsAction="never" />
    <item
        android:id="@+id/action_addToList"
        android:icon="@drawable/ic_action_add_to_list"
        android:title="@string/action_AddToList"
        res-auto:showAsAction="always" />
</menu>
