<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_listType"
        android:icon="@drawable/ic_menu_switchlist"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_listType">
        <menu>
            <group
                android:id="@+id/listGroup"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/listType_all"
                    android:checkable="true"
                    android:title="@string/listType_all"/>
                <item
                    android:id="@+id/listType_inprogress"
                    android:checkable="true"
                    android:title="@string/listType_InProgress"/>
                <item
                    android:id="@+id/listType_completed"
                    android:checkable="true"
                    android:title="@string/listType_Completed"/>
                <item
                    android:id="@+id/listType_onhold"
                    android:checkable="true"
                    android:title="@string/listType_onhold"/>
                <item
                    android:id="@+id/listType_dropped"
                    android:checkable="true"
                    android:title="@string/listType_dropped"/>
                <item
                    android:id="@+id/listType_planned"
                    android:checkable="true"
                    android:title="@string/listType_planned"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/forceSync"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_sync"/>
    <item
        android:id="@+id/action_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="always|collapseActionView"
        android:title="Search"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_menu_account"
        android:orderInCategory="9000"
        android:showAsAction="never"
        android:title="@string/title_activity_logout"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_about"
        android:orderInCategory="9001"
        android:showAsAction="never"
        android:title="@string/title_activity_about"/>

</menu>