<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:res-auto="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/forceSync"
        android:icon="@drawable/ic_autorenew"
        android:title="@string/menu_sync"
        res-auto:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ViewMALPage"
        android:icon="@drawable/ic_language"
        android:title="@string/action_viewMALPage"
        res-auto:showAsAction="ifRoom" />

    <item
        android:id="@+id/Share"
        android:icon="@drawable/ic_share"
        android:title="@string/action_Share"
        res-auto:showAsAction="ifRoom" />
    <item
        android:id="@+id/View"
        android:icon="@drawable/ic_language"
        android:title="@string/action_viewListOnMAL"
        res-auto:showAsAction="never" />
</menu>
